--- a/HelloWorldApp/Base.lproj/LaunchScreen.storyboard
+++ b/HelloWorldApp/Base.lproj/LaunchScreen.storyboard
@@ -24,7 +24,7 @@
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemGreenColor"/>
                         <constraints>
                             <constraint firstItem="HoI-S6-2VN" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="4KE-Ud-Wc6"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HoI-S6-2VN" secondAttribute="trailing" constant="81" id="Ita-Ud-KPF"/>
@@ -38,8 +38,8 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
